# huberman-agent

./: .gitignore  README.md  docker-compose.yaml  habit_agent.py  habit_agent_logfire.py  main.py  pyproject.toml  qdrant_app.py  research_qdrant.py  token_guard.py
2-tools/: app.py  search_agent.py  search_tools.py
agent_logging/: agent_logging.py
ingestion/: README.md  ingest_qdrant.py  transcription.py
multi_agent/: orchest_agent.py  orchestrator_run.py  websearch_agent.py
research_agent/: utils.py
search_agent/: agent.py  search_agent.py  search_tools.py
tests/: ground_truth_sample.csv  test_agent.py  test_judge_agent.py  test_judge_search_agent.py  test_search_agent.py  utils.py
tests/test_results/: judge_eval_results.json
tools/: qdrant_search.py  search_tools.py  utils.py  websearch_tools.py
